[gd_scene load_steps=2 format=3 uid="uid://0jtxrjnvhkey"]

[ext_resource type="Script" path="res://test11-multi/MultiMain.gd" id="1_k88dl"]

[node name="MultiMain" type="Node2D"]
script = ExtResource("1_k88dl")

[node name="Send" type="Button" parent="."]
offset_left = 10.0
offset_top = 223.0
offset_right = 56.0
offset_bottom = 254.0
text = "send"

[node name="Label" type="Label" parent="."]
offset_left = 17.0
offset_top = 15.0
offset_right = 155.0
offset_bottom = 38.0
text = "awaiting message"

[node name="SetServer" type="Button" parent="."]
offset_left = 99.0
offset_top = 222.0
offset_right = 221.0
offset_bottom = 253.0
text = "set as server"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 9.0
offset_top = 91.0
offset_right = 273.0
offset_bottom = 194.0
placeholder_text = "Write your message here"

[node name="SetClient" type="Button" parent="."]
offset_left = 244.0
offset_top = 218.0
offset_right = 344.0
offset_bottom = 249.0
text = "set as client"

[connection signal="pressed" from="Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="SetServer" to="." method="_on_set_server_pressed"]
[connection signal="pressed" from="SetClient" to="." method="_on_set_client_pressed"]
